changed api + endpoints
