# doc/api.yaml
@@ -236,7 +236,7 @@ paths:
                 
             
         
-  /users/{user_id}/follow/{followed_id}:
+  /users/{user_id}/follows/{followed_id}:
     parameters:
       - $ref: "#/components/parameters/user_id"
       - name: followed_id
@@ -274,7 +274,7 @@ paths:
         '404': {$ref: "#/components/responses/NotFound"}
         '500': {$ref: "#/components/responses/InternalServerError"}
       
-  /users/{user_id}/banned/{ban_id}:
+  /users/{user_id}/bans/{ban_id}:
     parameters:
       - $ref: "#/components/parameters/user_id"
       - name: ban_id
@@ -343,7 +343,7 @@ paths:
           '403': {$ref: "#/components/responses/Forbidden"}
           '404': {$ref: "#/components/responses/NotFound"}
           '500': {$ref: "#/components/responses/InternalServerError"}  
-  /posts/{post_id}/comments/comment/{user_id}:
+  /posts/{post_id}/comments/{user_id}:
     post:
       security:
         - bearerAuth: []
@@ -366,6 +366,7 @@ paths:
                 comment_text:
                   type: string
                   description: "the comment's content"
+                  pattern: "[a-zA-Z1-9.,:<>?-_+='~#@;%\"$&*!]*"
                   example: "cool pic!"
                   minLength: 1
                   maxLength: 200
@@ -380,7 +381,7 @@ paths:
           '400': {$ref: "#/components/responses/BadRequest"}
           '403': {$ref: "#/components/responses/Forbidden"}
           '500': {$ref: "#/components/responses/InternalServerError"}
-  /posts/{post_id}/comments/delete/{comment_id}:
+  /posts/{post_id}/comments/{comment_id}:
     delete:
       security:
           - bearerAuth: []
@@ -545,7 +546,7 @@ components:
           type: string
           description: the timestamp of the comment
           format: date-time
-          pattern: '^[1-9]{4}\-[1-9]{2}\-[1-9]{2}T[1-9]{2}:[1-9]{2}:[1-9]{3}Z$'
+          pattern: '[0-9]{4}\-[0-9]{2}\-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{3}'
           example: "2018-03-20T09:12:281Z"
     photo_metadata:
       description: "object representation of a post"
@@ -586,7 +587,7 @@ components:
           description: the timestamp of the post
           format: date-time
           example: "2018-03-20T09:12:281Z"
-          pattern: '^[1-9]{4}\-[1-9]{2}\-[1-9]{2}T[1-9]{2}:[1-9]{2}:[1-9]{3}Z$'
+          pattern: '[0-9]{4}\-[0-9]{2}\-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{3}'
     photo:
       type: string
       format: byte 
